Un cambio en el HTML, sume una imagen y aplique ciclos al codigo de js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <h2>Panchos: $120 c/u</h2>
         <img src="/img/panchos.jpg" alt="">
 
-        <h3>Aderezos (Mayonesa y Ketchup): $250</h3>
+        <h2>Gaseosas (linea Coca-cola) 2Litros $150 c/u</h2>
+        <img src="/img/Coca.jpg" alt="" height="400" width="400">
     </main>
 
     <br>
