Aplique un principio de funciones al final del codigo para calcular el monto total y el iva incluido

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
         <h2>Gaseosas (linea Coca-cola) 2Litros $150 c/u</h2>
         <img src="/img/Coca.jpg" alt="" height="400" width="400">
+        <h3 style="font-size: 50px;">Todos los precios incluyen IVA</h3>
     </main>
+
+    <!--Seguramente despues incluya CSS, asi queda un codigo mas limpio y facil de leer-->
 
     <br>
 
